network_policy/test_deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
